feat: add statistics package and routing boilerplates
